--- a/index.html
+++ b/index.html
@@ -124,16 +124,17 @@
                 { name: 'A YKK AF COMPANY', url: 'https://www.ykkap.co.jp/english/' },
                 { name: 'GEP', url: 'https://www.gep.com/careers/join-us/campus-connect/india' },
                 { name: 'CNH', url: 'https://www.cnhindustrial.com/en-in/' },
-                { name: 'MARITIME INDUSTRIAL', url: 'https://www.maritimeindustrial.co.uk/' },
+                { name: 'AG Maritime', url: 'https://www.ag-maritime.com/company' },
                 { name: 'PCBL', url: 'https://www.pcblltd.com/' },
             ],
 
             supportingPartners: [
-                { name: 'IIM Calcutta', logo: 'http://googleusercontent.com/file_content/5' },
-                { name: 'IIT Kanpur', logo: 'http://googleusercontent.com/file_content/4' },
-                { name: 'CII', logo: 'http://googleusercontent.com/file_content/3' },
-                { name: 'JICA', logo: 'http://googleusercontent.com/file_content/7' },
-                { name: 'DPIIT', logo: 'http://googleusercontent.com/file_content/2' },
+                { name: 'IIM Calcutta', logo: 'iimc_logo.png' },
+                { name: 'IIT Kanpur', logo: 'iit_kanpur_logo.png' },
+                { name: 'IIT Madras', logo: 'iit_madras_logo.png' }, // Added IIT Madras logo
+                { name: 'CII', logo: 'cii_logo.jpg' },
+                { name: 'JICA', logo: 'jica_logo.png' },
+                { name: 'DPIIT', logo: 'dpiit_logo.jpg' },
             ]
         };
 
@@ -170,7 +171,7 @@
             const header = document.createElement('header');
             header.className = 'text-center mb-4 bg-white p-4 rounded-xl shadow-lg flex-shrink-0';
             header.innerHTML = `
-                <img src="http://googleusercontent.com/file_content/8" alt="VLMP Logo" class="mx-auto h-16 sm:h-20 mb-2 object-contain rounded-md" />
+                <img src="vlmp_logo.png" alt="VLMP Logo" class="mx-auto h-16 sm:h-20 mb-2 object-contain rounded-md" />
                 <h1 class="text-2xl sm:text-3xl lg:text-4xl font-extrabold text-[${PRIMARY_TEXT}] mb-1">
                     PGPEx-VLM Batch Profile
                 </h1>
