--- a/index.html
+++ b/index.html
@@ -135,14 +135,21 @@
                 { name: 'CII', logo: 'cii_logo.jpg', url: 'https://www.cii.in/' },
                 { name: 'JICA', logo: 'jica_logo.png', url: 'https://www.jica.go.jp/english/overseas/india/index.html' },
                 { name: 'DPIIT', logo: 'dpiit_logo.jpg', url: 'https://www.dpiit.gov.in/' },
+            ],
+            programHighlightsContent: [
+                "**Visionary Leadership:** Develops leaders with a strategic outlook for manufacturing excellence.",
+                "**Global Exposure:** Focus on international best practices and global supply chains.",
+                "**Industry-Academia Synergy:** Strong ties with leading industries and academic institutions.",
+                "**Holistic Curriculum:** Covers operations, supply chain, project management, and business strategy.",
+                "**Experiential Learning:** Emphasizes practical application and real-world problem-solving."
             ]
         };
 
         // Expanded set of pastel colors for charts and elements (more diverse)
         const CHART_COLORS = [
-            '#FFD1DC', // Pastel Pink
-            '#A7D9B4', // Pastel Green
             '#ADD8E6', // Light Blue
+            '#A7D9B4', // Pastel Green
+            '#FFD1DC', // Pastel Pink
             '#FFECB3', // Pastel Yellow
             '#D1C4E9', // Pastel Lavender
             '#FFC0CB', // Light Pink
@@ -187,27 +194,57 @@
             `;
             root.appendChild(header);
 
+            // Program Highlights Section
+            const programHighlightsSection = document.createElement('section');
+            programHighlightsSection.className = 'bg-white p-4 rounded-xl shadow-md mb-4 flex-shrink-0';
+            let highlightsListHtml = batchData.programHighlightsContent.map(item => `
+                <li class="flex items-start mb-2">
+                    <img src="airplane_icon.png" alt="Highlight Icon" class="w-5 h-5 mr-2 flex-shrink-0" />
+                    <p class="text-gray-700 text-sm sm:text-base">${item.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>')}</p>
+                </li>
+            `).join('');
+            programHighlightsSection.innerHTML = `
+                <h3 class="text-xl font-semibold text-gray-700 mb-3 text-center flex items-center justify-center">
+                    <img src="airplane_icon.png" alt="Program Highlights Icon" class="w-6 h-6 mr-2" />
+                    Program Highlights
+                </h3>
+                <ul class="list-none p-0 m-0 text-left max-w-2xl mx-auto">
+                    ${highlightsListHtml}
+                </ul>
+            `;
+            root.appendChild(programHighlightsSection);
+
             // Key Highlights Section
             const highlights = document.createElement('section');
             highlights.className = 'grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-5 gap-4 mb-4 flex-shrink-0';
             highlights.innerHTML = `
-                <div class="bg-white p-3 rounded-xl shadow-md flex flex-col items-center justify-center text-center">
+                <div class="bg-white p-3 rounded-xl shadow-md flex flex-col items-center justify-center text-center transform transition-transform duration-200 hover:scale-105">
+                    <img src="airplane_icon.png" alt="Batch Size Icon" class="w-8 h-8 mb-1" />
                     <p class="text-3xl font-bold text-[${HIGHLIGHT_TEXT}]">${batchData.batchSize}</p>
                     <p class="text-sm text-gray-600 mt-1">Batch Size</p>
                 </div>
-                <div class="bg-white p-3 rounded-xl shadow-md flex flex-col items-center justify-center text-center">
+                <div class="bg-white p-3 rounded-xl shadow-md flex flex-col items-center justify-center text-center transform transition-transform duration-200 hover:scale-105">
+                    <img src="airplane_icon.png" alt="Sample Icon" class="w-8 h-8 mb-1" />
+                    <p class="text-3xl font-bold text-[${HIGHLIGHT_TEXT}]">69%</p>
+                    <p class="text-sm text-gray-600 mt-1">Sample</p>
+                </div>
+                <div class="bg-white p-3 rounded-xl shadow-md flex flex-col items-center justify-center text-center transform transition-transform duration-200 hover:scale-105">
+                    <img src="airplane_icon.png" alt="Average Age Icon" class="w-8 h-8 mb-1" />
                     <p class="text-3xl font-bold text-[${HIGHLIGHT_TEXT}]">${batchData.averageAge}</p>
                     <p class="text-sm text-gray-600 mt-1">Avg. Age</p>
                 </div>
-                <div class="bg-white p-3 rounded-xl shadow-md flex flex-col items-center justify-center text-center">
+                <div class="bg-white p-3 rounded-xl shadow-md flex flex-col items-center justify-center text-center transform transition-transform duration-200 hover:scale-105">
+                    <img src="airplane_icon.png" alt="Work Exp Icon" class="w-8 h-8 mb-1" />
                     <p class="text-3xl font-bold text-[${HIGHLIGHT_TEXT}]">${batchData.averageWorkExperience}</p>
                     <p class="text-sm text-gray-600 mt-1">Avg. Work Exp. (Yrs)</p>
                 </div>
-                <div class="bg-white p-3 rounded-xl shadow-md flex flex-col items-center justify-center text-center">
+                <div class="bg-white p-3 rounded-xl shadow-md flex flex-col items-center justify-center text-center transform transition-transform duration-200 hover:scale-105">
+                    <img src="airplane_icon.png" alt="Global Exposure Icon" class="w-8 h-8 mb-1" />
                     <p class="text-3xl font-bold text-[${HIGHLIGHT_TEXT}]">${batchData.globalExposure}%</p>
                     <p class="text-sm text-gray-600 mt-1">Global Exposure</p>
                 </div>
-                <div class="bg-white p-3 rounded-xl shadow-md flex flex-col items-center justify-center text-center">
+                <div class="bg-white p-3 rounded-xl shadow-md flex flex-col items-center justify-center text-center transform transition-transform duration-200 hover:scale-105">
+                    <img src="airplane_icon.png" alt="NIT, IIT & PSU Icon" class="w-8 h-8 mb-1" />
                     <p class="text-3xl font-bold text-[${HIGHLIGHT_TEXT}]">${batchData.nitIitPsuPercentage}%</p>
                     <p class="text-sm text-gray-600 mt-1">From NIT, IIT & PSU</p>
                 </div>
@@ -219,6 +256,10 @@
             chartsSection.className = 'flex-grow min-h-0 flex flex-col';
             chartsSection.innerHTML = `
                 <div class="bg-white p-4 rounded-xl shadow-md mb-4 flex-grow flex flex-col">
+                    <h3 class="text-xl font-semibold text-gray-700 mb-3 text-center flex items-center justify-center">
+                        <img src="airplane_icon.png" alt="Batch Analytics Icon" class="w-6 h-6 mr-2" />
+                        Batch Analytics
+                    </h3>
                     <div id="chart-tabs" class="flex flex-wrap justify-center gap-2 mb-4 flex-shrink-0">
                         <button id="tab-workExperience" class="px-4 py-2 rounded-full text-sm font-medium transition-colors duration-200 bg-[${BUTTON_ACTIVE_BG}] text-white shadow-md">
                             Work Exp.
@@ -234,7 +275,7 @@
                         </button>
                     </div>
                     <div id="chart-container" class="flex-grow flex items-center justify-center">
-                        <canvas id="pieChartCanvas" class="chart-canvas active"></canvas>
+                        <canvas id="chartCanvas" class="chart-canvas active"></canvas>
                     </div>
                 </div>
             `;
@@ -250,7 +291,10 @@
                 </a>
             `).join('');
             professionalBackground.innerHTML = `
-                <h3 class="text-xl font-semibold text-gray-700 mb-3 text-center">Professional Background</h3>
+                <h3 class="text-xl font-semibold text-gray-700 mb-3 text-center flex items-center justify-center">
+                    <img src="airplane_icon.png" alt="Professional Background Icon" class="w-6 h-6 mr-2" />
+                    Professional Background
+                </h3>
                 <div class="flex flex-wrap justify-center gap-2 max-h-24 overflow-y-auto custom-scrollbar">
                     ${companyLinksHtml}
                 </div>
@@ -267,7 +311,10 @@
                 </a>
             `).join('');
             partnersSection.innerHTML = `
-                <h3 class="text-xl font-semibold text-gray-700 mb-3 text-center">Supporting & Consulting Partners</h3>
+                <h3 class="text-xl font-semibold text-gray-700 mb-3 text-center flex items-center justify-center">
+                    <img src="airplane_icon.png" alt="Partners Icon" class="w-6 h-6 mr-2" />
+                    Supporting & Consulting Partners
+                </h3>
                 <div class="flex flex-wrap justify-center items-center gap-4">
                     ${partnerLogosHtml}
                 </div>
@@ -278,7 +325,7 @@
             root.appendChild(partnersSection);
 
             // Chart rendering logic
-            const chartCanvas = document.getElementById('pieChartCanvas');
+            const chartCanvas = document.getElementById('chartCanvas');
             const chartTabs = document.getElementById('chart-tabs');
             let activeChartId = 'workExperience'; // Initial active chart
 
@@ -287,23 +334,27 @@
                     currentChartInstance.destroy(); // Destroy previous chart instance
                 }
 
-                let data, title;
+                let data, title, chartTypeJs;
                 switch (chartType) {
                     case 'workExperience':
                         data = batchData.workExperienceDistribution;
                         title = 'Work Experience Distribution';
+                        chartTypeJs = 'pie'; // Retained as Pie Chart
                         break;
                     case 'industry':
                         data = batchData.industryDistribution;
                         title = 'Industry-wise Distribution';
+                        chartTypeJs = 'bar'; // Retained as Bar Chart
                         break;
                     case 'functional':
                         data = batchData.functionalExposure;
                         title = 'Functional Exposure';
+                        chartTypeJs = 'doughnut'; // Changed to Doughnut Chart
                         break;
                     case 'composition':
                         data = batchData.batchComposition;
                         title = 'Batch Composition';
+                        chartTypeJs = 'doughnut'; // Changed to Doughnut Chart
                         break;
                 }
 
@@ -316,48 +367,71 @@
                     }]
                 };
 
-                currentChartInstance = new Chart(chartCanvas, {
-                    type: 'pie',
-                    data: chartData,
-                    options: {
-                        responsive: true,
-                        maintainAspectRatio: false,
-                        plugins: {
-                            legend: {
-                                position: 'bottom',
-                                labels: {
-                                    color: '#4B5563', // gray-700
-                                    font: {
-                                        family: 'Inter',
-                                        size: 12
-                                    }
+                const chartOptions = {
+                    responsive: true,
+                    maintainAspectRatio: false,
+                    plugins: {
+                        legend: {
+                            position: 'bottom',
+                            labels: {
+                                color: '#4B5563', // gray-700
+                                font: {
+                                    family: 'Inter',
+                                    size: 12
                                 }
-                            },
-                            tooltip: {
-                                callbacks: {
-                                    label: function(context) {
-                                        let label = context.label || '';
-                                        if (label) {
-                                            label += ': ';
-                                        }
-                                        if (context.parsed !== null) {
-                                            label += context.parsed + '%';
-                                        }
-                                        return label;
+                            }
+                        },
+                        tooltip: {
+                            callbacks: {
+                                label: function(context) {
+                                    let label = context.label || '';
+                                    if (label) {
+                                        label += ': ';
                                     }
+                                    if (context.parsed !== null) {
+                                        label += context.parsed + '%';
+                                    }
+                                    return label;
                                 }
                             },
                             title: {
                                 display: false, // Title is handled by H3 above the canvas
                             }
                         },
-                        layout: {
-                            padding: {
-                                top: 0,
-                                bottom: 0
-                            }
+                    },
+                    layout: {
+                        padding: {
+                            top: 0,
+                            bottom: 0
                         }
                     }
+                };
+
+                if (chartTypeJs === 'bar') {
+                    chartOptions.scales = {
+                        x: {
+                            ticks: {
+                                color: '#4B5563', // gray-700
+                                font: { family: 'Inter' }
+                            },
+                            grid: { display: false }
+                        },
+                        y: {
+                            ticks: {
+                                color: '#4B5563', // gray-700
+                                font: { family: 'Inter' },
+                                callback: function(value) { return value + '%'; }
+                            },
+                            grid: { color: '#E5E7EB' } // light gray grid lines
+                        }
+                    };
+                }
+
+
+                currentChartInstance = new Chart(chartCanvas, {
+                    type: chartTypeJs,
+                    data: chartData,
+                    options: chartOptions
                 });
             }
 
